k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podanvil-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podanvil
  template:
    metadata:
      labels:
        app: podanvil
    spec:
      containers:
      - name: podanvil
        image: thaodean/podanvil:latest
        ports:
        - containerPort: 80
