k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thaodean-service
spec:
  selector:
    app: podanvil
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
