k8s/thaodean-com_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thaodean-com-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - thaodean-com.podanvil.com
    secretName: thaodean-com-tls
  rules:
  - host: thaodean-com.podanvil.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: thaodean-com-service
            port:
              number: 80
